Created blog page

--- a/src/posts/2020/2020-06-02-post-1/index.mdx
+++ b/src/posts/2020/2020-06-02-post-1/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: First Post - With MDX
 description: First dummy MDX post for new website
+featuredImage: ./alexandre-debieve-FO7JIlwjOtU-unsplash.jpg
 date: 2020-06-02
 published: true
 ---
