--- a/src/posts/2020/2020-06-16-post-3/index.mdx
+++ b/src/posts/2020/2020-06-16-post-3/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Third Post - With MDX
 description: Third dummy MDX post for new website
+featuredImage: ./alex-knight-2EJCSULRwC8-unsplash.jpg
 date: 2020-06-09
 published: true
 ---
