--- a/src/posts/2020/2020-06-09-post-2/index.mdx
+++ b/src/posts/2020/2020-06-09-post-2/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Second Post - With MDX
 description: Second dummy MDX post for new website
+featuredImage: ./ales-nesetril-Im7lZjxeLhg-unsplash.jpg
 date: 2020-06-09
 published: true
 ---
