Display single post

--- a/src/posts/2020/2020-06-02-post-1/index.mdx
+++ b/src/posts/2020/2020-06-02-post-1/index.mdx
@@ -2,6 +2,8 @@
 title: First Post - With MDX
 description: First dummy MDX post for new website
 featuredImage: ./alexandre-debieve-FO7JIlwjOtU-unsplash.jpg
+imageCreator: Alexandre Debiève
+imageLink: https://unsplash.com/photos/FO7JIlwjOtU
 date: 2020-06-02
 published: true
 ---
