--- a/src/posts/2020/2020-06-09-post-2/index.mdx
+++ b/src/posts/2020/2020-06-09-post-2/index.mdx
@@ -2,6 +2,8 @@
 title: Second Post - With MDX
 description: Second dummy MDX post for new website
 featuredImage: ./ales-nesetril-Im7lZjxeLhg-unsplash.jpg
+imageCreator: Ales Nesetril
+imageLink: https://unsplash.com/photos/Im7lZjxeLhg
 date: 2020-06-09
 published: true
 ---
