--- a/src/posts/2020/2020-06-16-post-3/index.mdx
+++ b/src/posts/2020/2020-06-16-post-3/index.mdx
@@ -2,7 +2,9 @@
 title: Third Post - With MDX
 description: Third dummy MDX post for new website
 featuredImage: ./alex-knight-2EJCSULRwC8-unsplash.jpg
-date: 2020-06-09
+imageCreator: Alex Knight
+imageLink: https://unsplash.com/photos/2EJCSULRwC8
+date: 2020-06-16
 published: true
 ---
 
