Completed blog page and single blog  styling

--- a/src/posts/2020/2020-06-09-post-2/index.mdx
+++ b/src/posts/2020/2020-06-09-post-2/index.mdx
@@ -8,7 +8,7 @@ date: 2020-06-09
 published: true
 ---
 
-# Second Post
+## Second Post
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eros ex, lobortis eget suscipit at, bibendum eget est. Duis fermentum nec felis sit amet pretium. Etiam vitae imperdiet neque. Cras facilisis varius pretium. Donec a aliquet sem. Donec lobortis diam eget nulla condimentum, id mollis ipsum sollicitudin. Sed lobortis dapibus tortor, dignissim varius orci hendrerit eu. Proin id laoreet elit. Maecenas pellentesque commodo justo, in tristique lorem laoreet at.
 
