--- a/src/posts/2020/2020-08-01-dynamic-imports/index.mdx
+++ b/src/posts/2020/2020-08-01-dynamic-imports/index.mdx
@@ -19,13 +19,13 @@ In this blog, we will try to use [Apex Charts](https://apexcharts.com/), a clien
 We will create an app using `create-next-app` which will set everything up for us. We'll name our app `nossr`. In your terminal lets run:
 
 ```bash
-npx create-next-app nossr
+$ npx create-next-app nossr
 ```
 
-then
+After its done installing, go into the nossr folder by running `cd nossr` and install the apexcharts and react-apexcharts packages
 
 ```bash
-npm install --save react-apexcharts apexcharts
+$ npm install --save react-apexcharts apexcharts
 ```
 
 After its all done installing, we can open the folder in our text editor.
